Minor updates to multifield plasticity workbook

--- a/jupyter/skel/ukacm_autumn_school/multifield_plasticity/multifield_plasticity.ipynb
+++ b/jupyter/skel/ukacm_autumn_school/multifield_plasticity/multifield_plasticity.ipynb
@@ -11,10 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Motivation\n",
-    "\n",
-    "Solving problems involving plasticity by conventional approaches necessitate the use of *internal* history variables which reside at the Gauss points of each finite element.\n",
-    "The existence of these history variables as integration point quantities can result in errors when projectig plastic histories, such as in the case of ALE meshing techniques.\n",
+    "Solving problems involving plasticity using conventional approaches necessitate the use of *internal* history variables which reside at the Gauss points of each finite element.\n",
+    "The existence of these history variables as integration point quantities can result in errors when projecting plastic histories, such as in the case of ALE meshing techniques.\n",
     "To this end, a novel plasticity formulation,  referred to as *Multifield plasticity*, is developed with a flavour of a mixed formulation such that the plastic history variables instead reside at the nodes and are treated as an additional solution field."
    ]
   },
@@ -25,10 +23,10 @@
     "## A summary of plasticity\n",
     "\n",
     "Plasticity is defined as the irreversible deformation of a body undergoing a motion.\n",
-    "The process is illustrated in the one-dimensional stress-strain curve in Figure 1, where $\\sigma_1$ is the maximum principal stress and $\\varepsilon_1$ is the maximum principal strain in the small-strain context.\n",
+    "The process is illustrated in the one-dimensional stress-strain curve in [Figure 1](#fig_1), where $\\sigma_1$ is the maximum principal stress and $\\varepsilon_1$ is the maximum principal strain in the small-strain context.\n",
     "The importance of the assumption of infinitesimal strains will be emphasised.\n",
     "To account for the onset of plastic behaviour, both the kinematic description and the constitutive description of the material must be altered such that the state of the body depends on previous states of plastic deformation which the body has experienced.\n",
-    "To this end, *history* variables, sometimes referred to as harening variables, such as the equivalent plastic strain $\\bar{\\varepsilon}_\\text{p}$ are introduced which describe the plastic state of the material."
+    "To this end, *history* variables, sometimes referred to as hardening variables, such as the equivalent plastic strain $\\bar{\\varepsilon}_\\text{p}$ are introduced which describe the plastic state of the material."
    ]
   },
   {
@@ -54,7 +52,7 @@
     "## A summary of computational plasticity\n",
     "\n",
     "While the history of computational plasticity is vast, a brief summary will be provided here.\n",
-    "However, for a more thorough review of the classical approaches to computational plasticity, see [[Simo, 2006]](#Simo_2006).\n",
+    "However, for a more thorough review of a classical approach to computational plasticity, see [[Simo, 2006]](#Simo_2006).\n",
     "\n",
     "### Kinematics\n",
     "\n",
@@ -63,18 +61,18 @@
     "\n",
     "#### Finite strain plasticity\n",
     "\n",
-    "If the material is assumed to undergo irreversible plastic deformation, the deformation gradient $\\mathbf{F}$ can be multiplicatively decomposed into elastic $\\mathbf{F}_\\text{e}$ and plastic $\\mathbf{F}_\\text{p}$ parts\n",
+    "If a material experiencing a motion $\\boldsymbol{\\varphi} \\left( \\mathbf{X}, t \\right)$ is assumed to undergo irreversible plastic deformation, the deformation gradient $\\mathbf{F}$ can be multiplicatively decomposed into elastic $\\mathbf{F}_\\text{e}$ and plastic $\\mathbf{F}_\\text{p}$ parts\n",
     "\\begin{equation} \\label{eqn:elastoplastic_decomp}\n",
     "\\mathbf{F} = \\mathbf{F}_\\text{e} \\mathbf{F}_\\text{p} .\n",
     "\\end{equation}\n",
     "\n",
     "The notion of *displacement* $\\mathbf{u}$ is introduced and is parameterised by\n",
     "\\begin{equation} \\label{eqn:displacement_parameterisation}\n",
-    "  \\mathbf{u} \\left( \\mathbf{X}, t \\right) = \\mathbf{\\varphi} \\left( \\mathbf{X}, t \\right) - \\mathbf{X}.\n",
+    "  \\mathbf{u} \\left( \\mathbf{X}, t \\right) = \\boldsymbol{\\varphi} \\left( \\mathbf{X}, t \\right) - \\mathbf{X}.\n",
     "\\end{equation}\n",
     "Similarly, the *velocity* $\\mathbf{v}$ is defined as the rate of displacement given by\n",
     "\\begin{equation}\n",
-    "  \\mathbf{v} \\left( \\mathbf{X}, t \\right) = \\frac{\\partial \\mathbf{\\varphi} \\left( \\mathbf{X}, t \\right)}{\\partial t} ,\n",
+    "  \\mathbf{v} \\left( \\mathbf{X}, t \\right) = \\frac{\\partial \\boldsymbol{\\varphi} \\left( \\mathbf{X}, t \\right)}{\\partial t} ,\n",
     "\\end{equation}\n",
     "since the material configuration $\\mathbf{X}$ is assumed invariant with time.\n",
     "\n",
@@ -94,7 +92,7 @@
     "\\begin{equation}\n",
     "\\mathbf{L}_\\text{p} = \\dot{\\mathbf{F}}_\\text{p} \\mathbf{F}_\\text{p}^{-1},\n",
     "\\end{equation}\n",
-    "since the plastic velocity gradient is defined in the stress-free configuration.\n",
+    "since the plastic velocity gradient $\\mathbf{L}_\\text{p}$ is defined in the stress-free configuration.\n",
     "\n",
     "From the polar decomposition of $\\mathbf{F}$ according to\n",
     "\\begin{equation}\n",
@@ -118,7 +116,7 @@
     "\\mathbf{d} = \\mathbf{d}_\\text{e} + {\\mathbf{R}_\\text{e}} \\mathbf{D}_\\text{p} \\mathbf{R}_\\text{e}^\\top .\n",
     "\\end{equation}\n",
     "\n",
-    "Expressing the motion $\\mathbf{\\varphi}$ in terms of the displacement $\\mathbf{u}$ \\eqref{eqn:displacement_parameterisation} allows the deformation gradient to be rewritten in terms of the material displacement gradient, given by\n",
+    "Expressing the motion $\\boldsymbol{\\varphi}$ in terms of the displacement $\\mathbf{u}$ \\eqref{eqn:displacement_parameterisation} allows the deformation gradient to be rewritten in terms of the material displacement gradient, given by\n",
     "\\begin{equation}\n",
     "  \\mathbf{F} = \\frac{\\partial \\mathbf{u}}{\\partial \\mathbf{X}} + \\mathbf{I} .\n",
     "\\end{equation}\n",
@@ -133,7 +131,7 @@
     "\n",
     "In the limit of small deformations, higher-order terms of the Green-Lagrangian strain can be neglected resulting in the linearised small strain tensor given by\n",
     "\\begin{equation}\n",
-    "\\mathbf{\\varepsilon} = \\frac{1}{2} \\left[ \\frac{\\partial \\mathbf{u}}{\\partial \\mathbf{X}} + \\left[ \\frac{\\partial \\mathbf{u}}{\\partial \\mathbf{X}} \\right]^\\top \\right] = \\text{sym} \\left( \\frac{\\partial \\mathbf{u}}{\\partial \\mathbf{X}} \\right) .\n",
+    "\\boldsymbol{\\varepsilon} = \\frac{1}{2} \\left[ \\frac{\\partial \\mathbf{u}}{\\partial \\mathbf{X}} + \\left[ \\frac{\\partial \\mathbf{u}}{\\partial \\mathbf{X}} \\right]^\\top \\right] = \\text{sym} \\left( \\frac{\\partial \\mathbf{u}}{\\partial \\mathbf{X}} \\right) .\n",
     "\\end{equation}\n",
     "\n",
     "Should the deformation remain small, only the symmetric part of the displacement gradient contributes to the deformation, implying that finite rotations are negligible.\n",
@@ -159,14 +157,15 @@
     "\\end{equation}\n",
     "and can be spectrally decomposed according to\n",
     "\\begin{equation} \\label{eqn:spectral_decomp_C}\n",
-    "\\mathbf{C} = \\sum_i=1^3 \\lambda_i^2 \\mathbf{N}_i \\otimes \\mathbf{N}_i .\n",
+    "\\mathbf{C} = \\sum_{i=1}^3 \\lambda_i^2 \\mathbf{N}_i \\otimes \\mathbf{N}_i ,\n",
     "\\end{equation}\n",
+    "where $\\lambda_i$ and $\\mathbf{N}_i$ are the principal stretches and eigenvectors in the material configuration, respectively.\n",
     "As a consequence of Equation \\ref{eqn:spectral_decomp_C}, the Hencky strain can then also be spectrally decomposed according to\n",
     "\\begin{equation}\n",
-    "\\mathbf{H} = \\sum_i=1^3 \\ln \\left( C_i \\right) \\mathbf{N}_i \\otimes \\mathbf{N}_i .\n",
+    "\\mathbf{H} = \\sum_{i=1}^3 \\ln \\left( \\lambda_i \\right) \\mathbf{N}_i \\otimes \\mathbf{N}_i .\n",
     "\\end{equation}\n",
     "\n",
-    "In the context of a plastically deforming body which experiences a multiplicative decomposition of the total deformation gradient (\\eqref{eqn:elastoplastic_decomp}), on a account of the logarithmic nature of the Hencky strain, the total strain decomposition remains additive even under finite deformations, according to\n",
+    "In the context of a plastically deforming body which experiences a multiplicative decomposition of the total deformation gradient \\eqref{eqn:elastoplastic_decomp}, on a account of the logarithmic nature of the Hencky strain, the total strain decomposition remains additive even under finite deformations, according to\n",
     "\\begin{equation}\n",
     "\\mathbf{H}_\\text{e} = \\mathbf{H} - \\mathbf{H}_\\text{p},\n",
     "\\end{equation}\n",
@@ -192,7 +191,7 @@
     "respectively.\n",
     "\n",
     "Even the problem of rate-independent plasticity is time-dependent, necessitating an incremental solution procedure.\n",
-    "Should the material be loaded above the intial yield stress of $\\sigma_0$, plasticity occurs.\n",
+    "Should the material be loaded above the initial yield stress of $\\sigma_0$, as shown in [Figure 1](#fig_1), plasticity occurs.\n",
     "The range of elastic behaviour is described by a scalar yield function where\n",
     "\\begin{equation}\n",
     "f \\left( \\mathbf{\\sigma}, \\theta_i \\right)\n",
@@ -202,13 +201,13 @@
     "\\end{cases}\n",
     "\\end{equation}\n",
     "where the case of $f = 0$ defines the *yield surface*.\n",
-    "The yield function depends on the current state of stress $\\mathbf{\\sigma}$ and hardening variables $\\theta_i$.\n",
+    "The yield function depends on the current state of stress $\\boldsymbol{\\sigma}$ and hardening variables $\\theta_i$.\n",
     "Hardening variables, also referred to as internal, hidden, and state variables, are used to describe the state of plastic deformation of the body.\n",
     "\n",
     "The deformation is defined to be elastic when $f < 0$ and inelastic when $f = 0$.\n",
     "In the case that $f < 0$, an elastic description of the material fully defines the behaviour.\n",
     "However, should plastic deformation occur, it is necessary to alter the constitutive material response.\n",
-    "After plastic flow is initiated at $\\sigma_\\text{y}$, plastic flow are incorporated affects the subsequent material behaviour.\n",
+    "After plastic flow is initiated at $\\sigma_\\text{y}$, the effects are incorporated into the subsequent material behaviour.\n",
     "An associative flow rule is defined as where the direction of plastic flow coincides with the direction of the outward normal of the yield surface.\n",
     "When using the Hencky model for finite strains, the plastic rate of deformation can be defined as\n",
     "\\begin{equation} \\label{eqn:flow_relation}\n",
@@ -227,9 +226,9 @@
     "\\begin{equation} \\label{eqn:flow_rule}\n",
     "f = \\lVert \\mathbf{T} + \\boldsymbol{\\chi} \\rVert_\\text{dev} - \\sigma_\\text{y} \\leq 0,\n",
     "\\end{equation}\n",
-    "where $\\sigma_\\text{y}$ is the current yield stress which accounts for *isotropic* hardening and $\\mathbf{\\chi}$ is the tensorial back stress which accounts for *kinematic* hardening.\n",
-    "For a given yield surface, as illustrated in Figure 2a, isotropic hardening acts to expand the yield surface.\n",
-    "However, in the case of kinematic hardening, the back stress tensor $\\mathbf{\\chi}$ acts to translate the yield surface, which would decrease the observed yield stress in compression, as seen in Figure 2b, leading to the material exhibiting the Bauschinger effect [[Simo, 2006]](#Simo_2006), [[Dunne, 2005]](#Dunne_2005)."
+    "where $\\lVert \\bullet \\rVert_\\text{dev}$ defines the norm of the deviatoric part of the stress, $\\sigma_\\text{y}$ is the current yield stress which accounts for *isotropic* hardening and $\\boldsymbol{\\chi}$ is the tensorial back stress which accounts for *kinematic* hardening.\n",
+    "For a given yield surface, as illustrated in [Figure 2(a)](#fig_2a), isotropic hardening acts to expand the yield surface.\n",
+    "However, in the case of kinematic hardening, the back stress tensor $\\boldsymbol{\\chi}$ acts to translate the yield surface, which would decrease the observed yield stress in compression, as seen in [Figure 2(b)](#fig_2b), leading to the material exhibiting the Bauschinger effect [[Simo, 2006]](#Simo_2006), [[Dunne, 2005]](#Dunne_2005)."
    ]
   },
   {
@@ -270,7 +269,7 @@
    "source": [
     "### Constitutive and flow relations\n",
     "\n",
-    "To solve the elastoplastic problem, both behaviours must be defined.\n",
+    "To solve the elastoplastic problem, both the elastic and the plastic behaviour must be defined.\n",
     "The evolution of isotropic and kinematic hardening are described via hardening relations.\n",
     "Typically, both the isotropic and kinematic hardening depend upon the equivalent plastic strain where\n",
     "\\begin{equation}\n",
@@ -281,7 +280,7 @@
     "\n",
     "In most plastically-deforming media, the elastic deformation conforms to Hooke's law, such that the elastic behaviour is defined as\n",
     "\\begin{equation}\n",
-    "\\mathbf{T} = \\mathbb{D} : \\mathbf{H_\\text{e}} .\n",
+    "\\mathbf{T} = \\mathbb{D} : \\mathbf{H}_\\text{e} .\n",
     "\\end{equation}\n",
     "As the Hencky stress $\\mathbf{T}$ can be related to both the first and second Piola-Kirchhoff stresses by Equations \\ref{eqn:P_T_conversion} and \\ref{eqn:S_T_conversion}, conventional finite deformation stress measures can be recovered.\n",
     "\n",
@@ -305,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Governing equation\n",
+    "## Conservation of linear momentum\n",
     "\n",
     "The conservation of linear momentum is briefly introduced for completeness.\n",
     "The problem definition includes a conservation law\n",
@@ -330,11 +329,11 @@
     "## Multifield plasticity for finite deformations\n",
     "\n",
     "Until this point, the discussion has been limited to the conventional treatment of computational plasticity.\n",
-    "Now, a mixed formulation of plasticity is introduced, namely \\emph{multifield} plasticity, to ensure that the plastic strains exist as degrees of freedom in the problem with the corresponding fields $\\tau \\in \\left[ L^2 \\right]^{3 \\times 3}$ and $\\mathbf{H}_\\text{p} \\in L^2$.\n",
-    "It should be noted that by approximating the plastic fields in $L^2$ ensures that the trace of the plastic strain disappears on the boundary, negating the requirement of suitable BCs for this field (similar to how the natural BCs become essential and vice versa as seen until now).\n",
-    "Furthermore, specific benefits arise when when considering such applications as ALE meshing, in which the projection of plastic history remains an open question.\n",
+    "Now, a mixed formulation of plasticity is introduced, namely *Multifield* plasticity, to ensure that the plastic strains exist as degrees of freedom in the problem with the corresponding fields $\\tau \\in L^2$ and $\\mathbf{H}_\\text{p} \\in \\left[ L^2 \\right]^{3 \\times 3}$.\n",
+    "It should be noted that by approximating the plastic fields in $L^2$ ensures that the trace of the plastic strain disappears on the boundary, negating the requirement of suitable boundary conditions for this field (similar to how the natural boundary conditions become essential and vice versa as seen until now).\n",
+    "Furthermore, specific benefits arise when considering such applications as ALE meshing, in which the projection of plastic history remains an open question.\n",
     "\n",
-    "To formulate the problem in a variational framework, in addition to the conservation of linear momentum \\ref{eqn:linear_momentum_cons} with a corresponding weak form of\n",
+    "To formulate the problem in a variational framework, in addition to the conservation of linear momentum \\eqref{eqn:linear_momentum_cons} with a corresponding weak form of\n",
     "\\begin{equation}\n",
     "\\int_\\Omega \\delta \\mathbf{F} : \\mathbf{P} \\ \\text{d} V - \\int_{\\Gamma_{\\mathbf{t}}} \\delta \\mathbf{u} \\cdot \\bar{{}\\mathbf{t}} \\ \\text{d} A = 0 \\quad \\forall \\delta \\mathbf{u} \\in \\left[ H_0^1 \\right]^3 ,\n",
     "\\end{equation}\n",
@@ -346,12 +345,12 @@
     "where $c_\\tau$ is a stability parameter.\n",
     "Equation \\ref{eqn:c_function} is then used as the governing equation for the newly introduced plastic multiplier field, with the weak form following as\n",
     "\\begin{equation}\n",
-    "\\int_\\Omega \\delta \\tau \\left[ c_\\tau \\dot{\\tau} - f - \\lvert c_\\tau \\dot{\\tau} + f \\rvert \\right] \\ \\text{d} V = 0 \\quad \\forall \\delta \\mathbf{u} \\in L^2 .\n",
+    "\\int_\\Omega \\delta \\tau \\left[ c_\\tau \\dot{\\tau} - f - \\lvert c_\\tau \\dot{\\tau} + f \\rvert \\right] \\ \\text{d} V = 0 \\quad \\forall \\delta \\tau \\in L^2 .\n",
     "\\end{equation}\n",
-    "The resulting value of $\\dot{\\tau}$ is then used to inform $\\mathbf{H}_\\text{p}$ according to the flow relation \\eqref{eqn:flow_relation}.\n",
+    "The resulting value of $\\dot{\\tau}$ is then used to inform $\\dot{\\mathbf{H}}_\\text{p}$ according to the flow relation \\eqref{eqn:flow_relation}.\n",
     "\n",
-    "Finally, a consistency condition is required coupling the resulting plastic strains $\\mathbf{E}_\\text{p}$ and the plastic multiplier results in the constraint\n",
-    "\\begin{eqaution}\n",
+    "Finally, a consistency condition is required coupling the resulting plastic strains $\\mathbf{H}_\\text{p}$ and the plastic multiplier results in the constraint\n",
+    "\\begin{equation}\n",
     "\\dot{\\mathbf{H}}_\\text{p} - \\dot{\\tau} \\frac{\\partial f}{\\partial \\mathbf{T}} = 0 \n",
     "\\end{equation}\n",
     "with a corresponding weak form of\n",
@@ -359,7 +358,7 @@
     "\\int_\\Omega \\delta \\mathbf{H}_\\text{p} : \\mathbb{D} : \\left[ \\dot{\\mathbf{H}}_\\text{p} - \\dot{\\tau} \\frac{\\partial f}{\\partial \\mathbf{T}} \\right] \\ \\text{d} V = 0 \\quad \\forall \\delta \\mathbf{H}_\\text{p} \\in \\left[ L^2 \\right]^{3 \\times 3}.\n",
     "\\end{equation}\n",
     "\n",
-    "By introducing the additional plastic multiplier field with nodal degrees of freedom, the need for conventional return-mapping algorithm with the associated internal variables at Gauss points is negated."
+    "By introducing the plastic multiplier field with additional degrees of freedom, the need for conventional return-mapping algorithm with the associated internal variables at Gauss points is negated."
    ]
   },
   {
@@ -410,7 +409,7 @@
    },
    "source": [
     "A bar is loaded by a prescribed displacement of $7 \\text{mm}$ at one end.\n",
-    "Due to the symmetry of the problem, 1/8th of the bar is modelled, as seen in Figure 3, reducing the problem size.\n",
+    "Symmetry of the problem is exploited such that one eighth of the bar is modelled, as seen in [Figure 3](#fig_3), reducing the problem size.\n",
     "On each face where symmetry is invoked, the normal displacements are constrained, while the displacements tangential to the surface are free.\n",
     "\n",
     "![cylinder_geom-2.png](attachment:cylinder_geom-2.png)\n",
@@ -420,7 +419,7 @@
     "In this instance, a Cubit mesh file is provided defining the necessary boundary conditions on the geometry.\n",
     "Further details of the benchmark problem set-up can be found in [[Miehe, 2002]](#Miehe_2002).\n",
     "\n",
-    "Investigate the effects of hardening parameters and approximation order on the force-displacement response.\n",
+    "Investigate the effects of hardening parameters, approximation order, and the assumptions of small/finite deformations on the force-displacement response.\n",
     "\n",
     "### References:\n",
     "\n",
