Added missing thermal conductivity to mixed_thermo_elastic

--- a/jupyter/skel/ukacm_autumn_school/mixed_thermo_elastic/thermo_elastic.ipynb
+++ b/jupyter/skel/ukacm_autumn_school/mixed_thermo_elastic/thermo_elastic.ipynb
@@ -103,7 +103,7 @@
     "\\begin{align}\n",
     "\\int_\\Omega \\boldsymbol{\\sigma}:\\nabla \\delta \\mathbf{u} \\,\\textrm{d}\\Omega - \\int_{\\Gamma_t} \\bar{\\mathbf{t}} \\cdot\\delta\\mathbf{u}\\,\\textrm{d}\\Gamma &= 0 \\quad\\forall \\delta \\mathbf{u}\\in \\mathbf{H}^1_0(\\Omega)\\\\\n",
     "\\int_\\Omega \\nabla\\cdot\\mathbf{q} \\;\\delta T \\,\\textrm{d}\\Omega + \\int_\\Omega c\\dot{T} \\delta T \\,\\textrm{d}\\Omega &= 0\\quad\\forall\\, \\delta T \\in L^2(\\Omega)\\\\\n",
-    "\\int_\\Omega\\mathbf{q} \\cdot \\delta \\mathbf{q} \\,\\textrm{d}\\Omega + \\int_{\\Gamma_T} \\bar{T}\\,\\delta \\mathbf{q}\\cdot{n} \\,\\textrm{d}\\Gamma - \\int_\\Omega k T \\,\\nabla \\cdot\\delta\\mathbf{q} \\,\\textrm{d}\\Omega &= 0\\quad\\forall\\, \\delta \\mathbf{q} \\in H(\\textrm{div}, \\Omega),\n",
+    "\\int_\\Omega\\mathbf{q} \\cdot \\delta \\mathbf{q} \\,\\textrm{d}\\Omega + \\int_{\\Gamma_T} k \\bar{T}\\,\\delta \\mathbf{q}\\cdot{n} \\,\\textrm{d}\\Gamma - \\int_\\Omega k T \\,\\nabla \\cdot\\delta\\mathbf{q} \\,\\textrm{d}\\Omega &= 0\\quad\\forall\\, \\delta \\mathbf{q} \\in H(\\textrm{div}, \\Omega),\n",
     "\\end{align}\n",
     "\n",
     "and the following essential boundary conditions hold:\n",
